@@ -1,6 +1,7 @@
 Revision history for Mojolicious-Plugin-Passphrase
 
 {{$NEXT}}
+          - Add passphrase command
 
 0.001     2023-02-12 23:19:36+01:00 Europe/Amsterdam
           Initial release to an unsuspecting world
